# cv_testing

./: CMakeLists.txt  get_image.cpp  show_image.py
